--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - main
-    pull_request:
-      types: [opened, reopened, synchronize]
+  pull_request:
+    types: [opened, edited, reopened, synchronize, ready_for_review]
 
 jobs:
   test:
