--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,10 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
+      - name: Run async tests
+        uses: actions-rs/cargo@v1
+        with:
+          command: test --features async
 
   clippy:
     name: Clippy
