--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,14 +22,14 @@ jobs:
         with:
           toolchain: ${{matrix.toolchain}}
           override: true
-      - name: Run tests
+      - name: Run default test suite
         uses: actions-rs/cargo@v1
         with:
           command: test
-      - name: Run async tests
+      - name: Run ReplyRepl async tests
         uses: actions-rs/cargo@v1
         with:
-          command: test --features async
+          command: test -p rustyrepl --features async
 
   clippy:
     name: Clippy
