--- a/repl-test/Cargo.toml
+++ b/repl-test/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-anyhow = { version = "1", features = ["backtrace"] }
+anyhow = { version = "1" }
 async-trait = "0.1"
 clap = { version = "3", features = ["derive"] }
 colored = "2"
