--- a/rustyrepl/Cargo.toml
+++ b/rustyrepl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustyrepl"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Sean Lawlor <slawlor@slawlor.com>"]
 description = "A Rust read, evaluate, print, loop (REPL) utility "
 license = "MIT"
@@ -15,10 +15,10 @@ default = []
 
 [dependencies]
 # Required dependencies
-anyhow = { version = "1", features = ["backtrace"] }
+anyhow = { version = "1" }
 clap = { version = "3", features = ["derive"] }
 dirs = "4"
-log = { version = "0.4.8", features = ["kv_unstable"] }
+log = { version = "0.4", features = ["kv_unstable"] }
 rustyline = "7"
 thiserror = "1"
 
@@ -26,4 +26,4 @@ thiserror = "1"
 async-trait = { version = "0.1", optional = true }
 
 [dev-dependencies]
-tokio = { version = "1.10", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
