--- a/rustyrepl/Cargo.toml
+++ b/rustyrepl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustyrepl"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Sean Lawlor <slawlor@slawlor.com>"]
 description = "A Rust read, evaluate, print, loop (REPL) utility "
 license = "MIT"
@@ -17,7 +17,7 @@ default = []
 # Required dependencies
 anyhow = { version = "1" }
 clap = { version = "3", features = ["derive"] }
-dirs = "4"
+dirs = "2"
 log = { version = "0.4", features = ["kv_unstable"] }
 rustyline = "7"
 thiserror = "1"
@@ -26,4 +26,9 @@ thiserror = "1"
 async-trait = { version = "0.1", optional = true }
 
 [dev-dependencies]
+colored = "2"
+ctor = "0.1"
+once_cell = "1"
+tempfile = "3"
+thread-id = "3"
 tokio = { version = "1", features = ["full"] }
